# orcchal

./: README.md
backend/: pyproject.toml
backend/app/: cssrag.py  llmresponse.py  main.py  webscraper.py
frontend/src/app/: page.tsx
